# my-own-wc

./: README.md  requirements.txt  test.txt
my-own-wc/: README.md  pyproject.toml
my-own-wc/mywc/: main.py
mywc/: README.md  pyproject.toml
mywc/mywc/: main.py
python/: main.py
