[tool.poetry]
name = "my-own-wc"
version = "0.1.0"
description = ""
authors = ["mariollesta"]
readme = "README.md"

[tool.poetry.scripts]
mywc = "my_own_wc.main:app"

[tool.poetry.dependencies]
python = "^3.12"
typer = {extras = ["all"], version = "^0.9.0"}
chardet = "^5.2.0"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
